@@ -1,4 +1,4 @@
-#define NODO_BUILD                       644 // ??? Ophogen bij iedere Build / versiebeheer.
+#define NODO_BUILD                       645 // ??? Ophogen bij iedere Build / versiebeheer.
 #define NODO_VERSION_MINOR                 5 // Ophogen bij gewijzigde settings struct of nummering events/commando's. 
 #define NODO_VERSION_MAJOR                 3 // Ophogen bij DataBlock en NodoEventStruct wijzigingen.
 #define UNIT_NODO                          1 // Unit nummer van deze Nodo
