@@ -81,8 +81,7 @@ boolean Plugin_020(byte function, struct NodoEventStruct *event, char *string)
   #if NODO_MEGA
   case PLUGIN_MMI_IN:
     {
-    char *TempStr=(char*)malloc(26);
-    string[25]=0;
+    char *TempStr=(char*)malloc(INPUT_COMMAND_SIZE);
 
     if(GetArgv(string,TempStr,1))
       {
